# BeatCovid

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  ResourcePath.hpp  ResourcePath.mm  Thumbs.db  UMLclass.graphml  Win_Version.sln  gitlab-ci.yml  main.cpp  test_map.tmx
BeatCovid/: BeatCovid-Info.plist  BeatCovid.aps  BeatCovid.entitlements  BeatCovid.vcxproj  BeatCovid.vcxproj.filters  ResourcePath.hpp  ResourcePath.mm  main.cpp  resource.h
BeatCovid.xcodeproj/: project.pbxproj
BeatCovid.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BeatCovid.xcodeproj/project.xcworkspace/xcuserdata/ivangorshkov.xcuserdatad/: UserInterfaceState.xcuserstate
BeatCovid.xcodeproj/project.xcworkspace/xcuserdata/s.alekhin.xcuserdatad/: UserInterfaceState.xcuserstate
BeatCovid.xcodeproj/xcshareddata/xcschemes/: BeatCovid.xcscheme
BeatCovid.xcodeproj/xcuserdata/ivangorshkov.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
BeatCovid.xcodeproj/xcuserdata/s.alekhin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
BeatCovid/Debug/: gamemanager.obj.enc  vc142.idb
BeatCovid/Debug/BeatCovid.tlog/: BeatCovid.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BeatCovid/Release/BeatCovid.tlog/: BeatCovid.lastbuildstate  BeatCovid.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BeatCovid/files/maps/: 1.tmx  10.tmx  2.tmx  3.tmx  4.tmx  5.tmx  8.tmx  9.tmx
BeatCovid/files/saves/: save_config_default.txt
BeatCovid/include/: GameManager.h  Interface.h  InterfaceButton.h  InterfaceLabel.h  Level_map.h  MusicManager.h  ResourcePath.hpp  SaveGame.h
BeatCovid/include/Animation/: AnimationManager.h
BeatCovid/include/Entities/: Antibodies.h  Bullet.h  Entity.h  Player.h  Sick.h
BeatCovid/include/Entities/Armors/: Armor.h
BeatCovid/include/Entities/Enemies/: Enemy.h  Police.h
BeatCovid/include/Entities/Transports/: SafeTransport.h  UnSafeTransport.h
BeatCovid/include/Game/: GameLabelManager.h  GameManager.h
BeatCovid/include/Interface/: Interface.h  InterfaceButton.h  InterfaceLabel.h  InterfaceLabelManager.h  InterfaceSprite.h  InterfaceTable.h
BeatCovid/src/: GameLables.cpp  GameManager.cpp  Interface.cpp  InterfaceButton.cpp  InterfaceLabel.cpp  InterfaceSprite.cpp  InterfaceText.cpp  Level_map.cpp  MusicManager.cpp  ResourcePath.cpp  SaveGame.cpp
BeatCovid/src/Animation/: AnimationManager.cpp
BeatCovid/src/Entities/: Antibodies.cpp  Bullet.cpp  Entity.cpp  Player.cpp  Sick.cpp
BeatCovid/src/Entities/Armors/: Armor.cpp  Cap.cpp  Robe.cpp  Shoes.cpp
BeatCovid/src/Entities/Enemies/: Enemy.cpp  OrdinaryEnemies.cpp  Police.cpp
BeatCovid/src/Entities/Transports/: SafeTransport.cpp  UnSafeTransport.cpp
BeatCovid/src/Game/: GameLabel.cpp  GameLabelManager.cpp  GameManager.cpp  GameTreatPatientProgressBar.cpp
BeatCovid/src/Interface/: Interface.cpp  InterfaceButton.cpp  InterfaceLabel.cpp  InterfaceLabelManager.cpp  InterfaceSprite.cpp
BeatCovid/x64/Debug/: vc142.idb
BeatCovid/x64/Debug/BeatCovid.tlog/: BeatCovid.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BeatCovid/x64/Release/: BeatCovid.res
BeatCovid/x64/Release/BeatCovid.tlog/: BeatCovid.lastbuildstate  BeatCovid.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog
Release/: BeatCovid.ipdb
VirusHunter.xcodeproj/: project.pbxproj
VirusHunter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
VirusHunter.xcodeproj/project.xcworkspace/xcuserdata/ivangorshkov.xcuserdatad/: UserInterfaceState.xcuserstate
VirusHunter.xcodeproj/project.xcworkspace/xcuserdata/s.alekhin.xcuserdatad/: UserInterfaceState.xcuserstate
VirusHunter.xcodeproj/xcuserdata/ivangorshkov.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
VirusHunter.xcodeproj/xcuserdata/s.alekhin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
files/: lvl2.tmx  test_map.tmx
files/images/: Thumbs.db
files/maps/: 1.tmx  2.tmx  3.tmx  4.tmx  5.tmx  lvl2.tmx  test_map.tmx
files/menu/: Thumbs.db
files/saves/: save1.txt  save_config_default.txt  save_stat.txt
include/: SaveGame.h
include/Entities/: Player.h
include/Game/: GameManager.h
include/Interface/: Interface.h
project/include/: Animation.h  AnimationManager.h  AnimationMenager.h  Antibodies.h  Arrmor.h  Breaker.h  Bullet.h  BulletManager.h  Enemy.h  EnemyManager.h  Entity.h  GameLables.h  GameManager.h  Glasses.h  Gloves.h  Interface.h  InterfaceSprite.h  InterfaceText.h  Level_map.h  Mask.h  MusicManager.h  Player.h  Robe.h  SaveGame.h  Vaccine.h  Virus.h
project/include/Animation/: Animation.h
project/include/Entities/: Antibodies.h  Bullet.h  Entity.h  Player.h  Sick.h
project/include/Game/: GameFPS.h  GameLabel.h  GameLabels.h  GameManager.h
project/include/Interface/: Interface.h  InterfaceMultiLineLabel.h
project/include/tinyxml/: changes.txt  readme.txt  tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
project/src/: Animation.cpp  AnimationManager.cpp  AnimationMenager.cpp  Antibodies.cpp  Arrmor.cpp  Breaker.cpp  Bullet.cpp  BulletManager.cpp  Enemy.cpp  EnemyManager.cpp  Entity.cpp  GameLables.cpp  GameManager.cpp  Glasses.cpp  Gloves.cpp  Interface.cpp  InterfaceSprite.cpp  InterfaceText.cpp  Level_map.cpp  Mask.cpp  MusicManager.cpp  Player.cpp  Robe.cpp  SaveGame.cpp  Vaccine.cpp
project/src/Animation/: Animation.cpp  AnimationManager.cpp
project/src/Entities/: Antibodies.cpp  Bullet.cpp  Entity.cpp  Player.cpp  Sick.cpp
project/src/Game/: GameFPS.cpp  GameLabel.cpp  GameLabelManager.cpp  GameLabels.cpp  GameManager.cpp  GameTreatPatientProgressBar.cpp
project/src/Interface/: Interface.cpp  InterfaceMultiLineLabel.cpp  InterfaceTable.cpp
src/: SaveGame.cpp
src/Entities/: Player.cpp  Player_old.cpp
src/Game/: GameManager.cpp
src/Interface/: Interface.cpp
x64/Release/: BeatCovid.ipdb
(+46 files in other folders)
